# cube-vision

./: .gitignore  README.md  calibrate.py  color_detect.py  config.yaml  pyproject.toml  realsense_capture.py
cube_vision/: __init__.py  hardware.py  ik.py  pick.py  transforms.py  vision.py  visualize.py
cube_vision.egg-info/: PKG-INFO  SOURCES.txt
cube_vision/config/: __init__.py  paths.py  robot.py
cube_vision/hardware/: __init__.py  calibration.py  motors.py  realsense.py
cube_vision/perception/: color.py  point_cloud.py
cube_vision/planning/: ik_so101.py  joint_mapping.py
cube_vision/transforms/: camera_to_base.py
cube_vision/visualization/: color_detection.py  ik.py
cube_vision/workflows/: __init__.py  pick_by_color.py
frame_transform/: frame_transform.py
ik_solver/: ik_so101.py
model/: xlerobot.xml
point_cloud/: __init__.py  visualize_point_cloud.py
scripts/: run_pick_demo.py  visualize_mujoco.py
scripts/manual/: check_ik_hardware.py  check_vision_transform.py  diagnose_flip.py  diagnose_transform.py
tests/: diagnose.py  diagnose_flip.py  test_camera_to_base.py  test_color_detection.py  test_ik_so101.py  test_joint_mapping.py  test_point_cloud.py
visualization/: visualize_color_detect.py  visualize_ik.py  visualize_mujoco.py
