[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-vision"
version = "0.1.0"
description = "Robot vision and manipulation experiments for SO-101"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["cube_vision*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
